--- a/WebApplication/Views/Order/List.cshtml
+++ b/WebApplication/Views/Order/List.cshtml
@@ -12,225 +12,83 @@
 
     <script type="text/javascript" src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="~/Content/layer/layer.js"></script>
-    <script type="text/javascript" src="~/Scripts/MyJsLib/MyJsLib.js"></script>
+    <script type="text/javascript" src="~/Scripts/MyJsLib/MyPageList.js"></script>
 
     <script type="text/javascript">
+
         $(function () {
-            GetData(1);
+            Init();
         });
 
-        function GetData(page_index) {
-            //加载层
-            var index = layer.load(0, { shade: false }); //0代表加载的风格，支持0-2
-            var begin_index = 0;
-            var end_index = 0;
-            var page_size = 15;
-            var row_count = 0;
-            begin_index = (page_index - 1) * page_size + 1;
-            end_index = page_index * page_size;
-
-            MyAjax({
-                "url": "/Order/GetListData"
-                ,
-                "data": { "begin_index": begin_index, "end_index": end_index }
-                ,
-                "fnSuccess": function (pData) {
-                    try {
-                        var lData = JSON.parse(pData);
-                        var lListHtml = "";
-
-                        lListHtml = "<table class='table table-bordered table-hover table-striped'>";
-                        lListHtml += "<tr>";
-                        lListHtml += "<th>";
-                        lListHtml += "订单编号";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "客商编号";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "经销商编号";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "下单日期";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "下单人";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "收货地址";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "预计发货日期";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "订单金额";
-                        lListHtml += "</th>";
-                        lListHtml += "<th>";
-                        lListHtml += "开票金额";
-                        lListHtml += "</th>";
-                        lListHtml += "</tr>";
-                        for (var i = 0; i < lData.length; i++) {
-                            row_count = lData[i].RowCnt;
-                            lListHtml += "<tr>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].ID;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].CustomerCode;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].DistributorCode;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].SubmitDate;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].SubmitMan;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].RecAddress;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].DeliveryDate;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].Money;
-                            lListHtml += "</td>";
-                            lListHtml += "<td>";
-                            lListHtml += lData[i].InvoiceMoney;
-                            lListHtml += "</td>";
-                            lListHtml += "</tr>";
+        function Init() {
+            myPageList.Config(
+                {
+                    mTableDivID: "divList"
+                    ,
+                    mPageIndexDivID: "divPageIndex"
+                    ,
+                    mRequestUrl: "/Order/GetListData"
+                    ,
+                    mRequestParams: {}
+                    ,
+                    mColumns: [
+                        {
+                            mColumnHeaderText: "订单号"
+                            ,
+                            mColumnDataSourceID: "ID"
                         }
-                        lListHtml += "</table>";
-
-                        $("#divList").html(lListHtml);
-
-                        //生成分页HTML
-                        GeneratePageIndexHtml(row_count, page_size, page_index);
-                    } catch (err) {
-                        layer.alert(err.message, { icon: 5 });
-                    }
-                    layer.close(index);
+                        ,
+                        {
+                            mColumnHeaderText: "客商编号"
+                            ,
+                            mColumnDataSourceID: "CustomerCode"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "经销商编号"
+                            ,
+                            mColumnDataSourceID: "DistributorCode"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "订单提交日期"
+                            ,
+                            mColumnDataSourceID: "SubmitDate"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "下单人"
+                            ,
+                            mColumnDataSourceID: "SubmitMan"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "收货地址"
+                            ,
+                            mColumnDataSourceID: "RecAddress"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "预计发货日期"
+                            ,
+                            mColumnDataSourceID: "DeliveryDate"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "订单金额"
+                            ,
+                            mColumnDataSourceID: "Money"
+                        }
+                        ,
+                        {
+                            mColumnHeaderText: "开票金额"
+                            ,
+                            mColumnDataSourceID: "InvoiceMoney"
+                        }
+                    ]
                 }
-            });
-        }
-
-        //生成分页HTML
-        //row_count:记录条数
-        //page_size:页面记录数
-        //page_index:当前页下标
-        function GeneratePageIndexHtml(row_count, page_size, page_index) {
-            var lPageIndexHtml = "";
-            //page_count:页数
-            var page_count = Math.ceil(row_count / page_size);
-
-            lPageIndexHtml += "<nav aria-label='Page navigation'>";
-            lPageIndexHtml += "  <ul class='pagination'>";
-
-            //上一页
-            //如果当前页下标是1，即第一页，则上一页不可用
-            if (page_index == 1) {
-                lPageIndexHtml += "    <li class='disabled'>";
-                lPageIndexHtml += "      <a href='#' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>&laquo;</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-            }
-            else {
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index - 1) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>&laquo;</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-            }
-
-            //第一页到当前页HTML
-            if (page_index - 1 >= 5) {
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(1);' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>1</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index - 4) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>...</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index - 2) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>" + (page_index - 2) + "</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index - 1) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>" + (page_index - 1) + "</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li class='active'>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + page_index + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>" + page_index + "</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-            }
-            else {
-                for (var i = 1; i <= page_index ; i++) {
-                    if (i == page_index) {
-                        lPageIndexHtml += "<li class='active'><a href='#' onclick='GetData(" + i + ");'>" + i + "</a></li>";
-                    }
-                    else {
-                        lPageIndexHtml += "<li><a href='#' onclick='GetData(" + i + ");'>" + i + "</a></li>";
-                    }
-                }
-            }
-
-            //当前页到最后一页HTML
-            if (page_count - page_index >= 5) {
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index + 1) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>" + (page_index + 1) + "</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index + 2) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>" + (page_index + 2) + "</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index + 4) + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>...</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + page_count + ");' aria-label='Previous'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>" + page_count + "</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-            }
-            else {
-                for (var i = page_index + 1; i <= page_count ; i++) {
-                    lPageIndexHtml += "<li><a href='#' onclick='GetData(" + i + ");'>" + i + "</a></li>";
-                }
-            }
-
-            //如果当前页下标是page_count，即最后一页，则下一页不可用
-            if (page_index == page_count) {
-                lPageIndexHtml += "    <li class='disabled'>";
-                lPageIndexHtml += "      <a href='#' aria-label='Next'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>&raquo;</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-            }
-            else {
-                lPageIndexHtml += "    <li>";
-                lPageIndexHtml += "      <a href='#' onclick='GetData(" + (page_index + 1) + ");' aria-label='Next'>";
-                lPageIndexHtml += "        <span aria-hidden='true'>&raquo;</span>";
-                lPageIndexHtml += "      </a>";
-                lPageIndexHtml += "    </li>";
-            }
-
-            lPageIndexHtml += "  </ul>";
-            lPageIndexHtml += "</nav>";
-            $("#divPageIndex").html(lPageIndexHtml);
+                );
+            myPageList.LoadData(1);
         }
     </script>
 </head>
