--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -30,6 +30,9 @@
                     $("#divContent").load("/Order/Index");
                     break;
 
+                case "4":
+                    $("#divContent").load("/ProductClass/Index");
+                    break;
                 default:
                     break;
             }
@@ -44,9 +47,10 @@
         <div>
             <div style="width:20%;float:left;">
                 <ul class="nav nav-pills nav-stacked">
-                    <li class="active"><a href="#" onclick="MenuClick(this,'1');">经销商列表</a></li>
-                    <li><a href="#" onclick="MenuClick(this,'2');">产品列表</a></li>
-                    <li><a href="#" onclick="MenuClick(this,'3');">订单列表</a></li>
+                    <li class="active"><a href="#" onclick="MenuClick(this,'1');">经销商</a></li>
+                    <li><a href="#" onclick="MenuClick(this,'2');">产品</a></li>
+                    <li><a href="#" onclick="MenuClick(this,'3');">订单</a></li>
+                    <li><a href="#" onclick="MenuClick(this,'4');">产品分类</a></li>
                 </ul>
             </div>
             <div style="width:80%;float:left;" id="divContent">
