删除对jquery.3.3.1.min.js文件的引用，改为引用jquery.1.10.2.min.js文件

--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -2,16 +2,13 @@
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link type="text/css" rel="stylesheet" href="~/Content/bootstrap.min.css" />
-
-    <script type="text/javascript" src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="~/Content/layer/layer.js"></script>
     <script type="text/javascript">
         function MenuClick(obj, param) {
@@ -54,12 +51,11 @@
                 </ul>
             </div>
             <div style="width:80%;float:left;" id="divContent">
-
             </div>
         </div>
         <div style="position:fixed;height:40px;bottom:0px;text-align:center;width:100%;z-index:2;">
             EFGH
         </div>
+    </div>
 </body>
 </html>
-
