改进分页类对象，拆分为分页表格类和分页页码类，两类之间相互引用，改用jquery  方法创建节点元素，on方法绑定事件处理程序为类方法，事件处理程序中传入类对象，进而调用类方法，该在页面js中声明分页类的局部对象

--- a/WebApplication/Views/Distributor/Index.cshtml
+++ b/WebApplication/Views/Distributor/Index.cshtml
@@ -2,9 +2,7 @@
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -17,7 +15,7 @@
         });
 
         function Init() {
-            myPageList.Config(
+            var lPageTable = new PageTable(
                 {
                     mTableDivID: "divDistributorList"
                     ,
@@ -60,7 +58,7 @@
                     ]
                 }
                 );
-            myPageList.LoadData(1);
+            lPageTable.LoadData(1);
         }
 
 
@@ -70,10 +68,8 @@
     <h1>经销商列表</h1>
     <div>
         <div id="divDistributorList">
-
         </div>
         <div id="divPageIndex">
-
         </div>
     </div>
 </body>
