--- a/WebApplication/Views/Product/Index.cshtml
+++ b/WebApplication/Views/Product/Index.cshtml
@@ -17,7 +17,7 @@
         });
 
         function Init() {
-            myPageList.Config(
+            var lPageTable = new PageTable(
                 {
                     mTableDivID: "divProductList"
                     ,
@@ -72,7 +72,7 @@
                     ]
                 }
                 );
-            myPageList.LoadData(1);
+            lPageTable.LoadData(1);
         }
 
       
