--- a/WebApplication/Views/ProductClass/Index.cshtml
+++ b/WebApplication/Views/ProductClass/Index.cshtml
@@ -2,9 +2,7 @@
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -17,7 +15,7 @@
         });
 
         function Init() {
-            myPageList.Config(
+            var lPageTable = new PageTable(
                 {
                     mTableDivID: "divProductClassList"
                     ,
@@ -36,7 +34,7 @@
                     ]
                 }
                 );
-            myPageList.LoadData(1);
+            lPageTable.LoadData(1);
         }
 
         function btnAdd_Click(pSender) {
@@ -50,10 +48,8 @@
         <h1>产品分类列表</h1>
         <input type="button" id="btnAdd" class="btn btn-primary" style="float:right;" value="新增" onclick="btnAdd_Click(this);" />
         <div id="divProductClassList">
-
         </div>
         <div id="divPageIndex">
-
         </div>
     </div>
 </body>
