设置每页记录数

--- a/WebApplication/Views/ProductCharacteristic/Index.cshtml
+++ b/WebApplication/Views/ProductCharacteristic/Index.cshtml
@@ -51,7 +51,7 @@
                 ,
                 mColumns: lColumns
             });
-
+            lPageTable.mPageIndex.mPageSize = 1;
             lPageTable.LoadData(1);
 
         }
