修改分页列表调用后台数据时传递的参数，原来传递行的起止行下标，改为传递当前页页码，和页面记录数，起止行下标，页面数均有后台数据提供代码计算。

--- a/WebApplication/Views/ProductCharacteristic/Index.cshtml
+++ b/WebApplication/Views/ProductCharacteristic/Index.cshtml
@@ -2,9 +2,7 @@
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -68,6 +66,7 @@
 <body>
     <div>
         <h1>产品类型特征列表</h1>
+        <input type="button" value="新增" class="btn btn-primary" style="float:right;" />
         <div id="divPageTable"></div>
         <div id="divPageIndex"></div>
     </div>
